@@ -3,7 +3,6 @@ lib_LTLIBRARIES = libmercator-0.2.la
 libmercator_0_2_la_LDFLAGS = -version-info @MERCATOR_VERSION_INFO@
 
 libmercator_0_2_la_SOURCES = \
-	tile.cpp \
 	Mercator.cpp \
 	Matrix.cpp \
 	Terrain.cpp \
@@ -12,7 +11,6 @@ libmercator_0_2_la_SOURCES = \
 libmercatordir = $(includedir)/Mercator-0.2/Mercator
 
 libmercator_HEADERS = \
-	tile.h \
 	Mercator.h \
 	Matrix.h \
 	Terrain.h \
