@@ -1,3 +1,0 @@
-void tile(int size, float falloff, float roughness, 
-	  float p1, float p2, float p3, float p4, float *array,
-          float& min, float &max);
